update content pictures

--- a/src/app/content/seattle/names/aliceBall.mdx
+++ b/src/app/content/seattle/names/aliceBall.mdx
@@ -7,7 +7,7 @@ latlon: [47.688015378435836, -122.35493261534445]
 neighborhood: Greenwood
 zoom: 15
 tags: ["names"]
-cameraImage: "/placeholderThumbnail.png"
+cameraImage: "/loc/seattle/aliceBall/daguerreotype.jpg"
 cardImage: "/placeholderThumbnail.png"
 stampName:
 photoPrompt:
