--- a/src/app/content/seattle/olmsted/ravenna.mdx
+++ b/src/app/content/seattle/olmsted/ravenna.mdx
@@ -1,7 +1,8 @@
 ---
 title: Disappearing Trees in Ravenna Park
-location: ["Hidden"]
+location: ["Seattle"]
 locationTitle: Ravenna Park
+hidden: true
 latlon: [47.67253514142577, -122.30892713366536]
 zoom: 14
 tags: ["olmsted"]
