--- a/src/app/content/seattle/built/sinking-ship.mdx
+++ b/src/app/content/seattle/built/sinking-ship.mdx
@@ -12,6 +12,7 @@ tags: [ "built"]
 photoPrompt: "Find the best and worst angles of the garage."
 blurb: "At the corner of Yesler, 1, and James sits the Sinking Ship Parking Garage, which was voted the coolest parking garage in the country. But before it was a parking garage, a famous hotel sat here."
 stampName: "/seattle-general-2.svg"
+stickers: [{image: "/loc/seattle/seattle-hotel.png", title: "Hotel Seattle", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.metropolitanseat00unse/?sp=19&r=-0.073,0.224,0.854,0.482,0"},{image: "/loc/seattle/sinkingShip/skeptic.png"}]
 ---
 
 <LOCItem
