--- a/src/app/content/seattle/names/denny-regrade.mdx
+++ b/src/app/content/seattle/names/denny-regrade.mdx
@@ -3,6 +3,7 @@ title: Why is Seattle so hilly?
 locationTitle: The Washington Hotel
 location: ["Seattle"]
 address: 3rd and Virginia
+hidden: true
 neighborhood: "Belltown"
 latlon: [47.612442249588334, -122.34076636007634]
 zoom: 15
