add arai stickers

--- a/src/app/content/seattle/architects/arai.mdx
+++ b/src/app/content/seattle/architects/arai.mdx
@@ -12,7 +12,7 @@ cardImage: "/loc/seattle/arai/gate.png"
 stampName: "/illustrations/seattleStamp2.png"
 photoPrompt:
 blurb:
-stickers: [{image: "/loc/seattle/arai/nisei.png", title: "" , linkOut: "https://www.loc.gov/resource/sn86071999/1949-05-11/ed-1/?sp=3&q=broadway+playfield&r=0.26,0.3,0.511,0.35,0"},{image: "/loc/seattle/arai/gate.png"}]
+stickers: [{image: "/loc/seattle/arai/nisei.png", title: "Snippet from The Northwest Times" , linkOut: "https://www.loc.gov/resource/sn86071999/1949-05-11/ed-1/?sp=3&q=broadway+playfield&r=0.26,0.3,0.511,0.35,0"},{image: "/loc/seattle/arai/gate.png"}]
 ---
 
 Born in 1900 on Bainbridge Island, Kichio Allen Arai was a Japanese American architect who was the first Asian American to create work under his own name in Seattle.
