change map style code, consolidate pin updates, don't break for loop for hidden pins

--- a/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
+++ b/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
@@ -9,7 +9,7 @@ zoom: 15
 tags: ["built", "names"]
 cameraImage: "/loc/seattle/bridgeAndTunnel/tunnel.jpg"
 cardImage: "/loc/seattle/bridgeAndTunnel/bridge.jpg"
-stampName:
+stampName: "/illustrations/seattleStamp2.png"
 photoPrompt: "Standing in this park, you can see the Homer Hadley Bridge on the left and the Lacey V Murrow Bridge on the right."
 blurb: "The Lacey V. Murrow Memorial Bridge was the first bridge to cross Lake Washington. When it opened in 1940, it was notable worldwide as the 'largest thing afloat' in the world."
 stickers: []
