--- a/src/app/content/seattle/architects/cunninghamHall.mdx
+++ b/src/app/content/seattle/architects/cunninghamHall.mdx
@@ -38,7 +38,7 @@ To create a fair that would rival Portland’s, Seattle hired the Olmsted Brothe
     image="/loc/seattle/cunninghamHall/bigMap.png"
     linkOut="https://www.loc.gov/resource/g4284s.ct011997/?r=-0.403,0.311,1.133,0.777,0"/>
 
-Cunningham Hall was designed by architects Saunders and Lawton, whose together designed many buildings around Seattle, including the old Beacon Hill Elementary School and the Alaska Building in Pioneer Square. They also designed the Hoo Hoo House for the AYP.
+Cunningham Hall was designed by architects Saunders and Lawton, who together designed many buildings around Seattle, including the old Beacon Hill Elementary School and the Alaska Building in Pioneer Square. They also designed the Hoo Hoo House for the AYP.
 
 <LOCItem
     type="pnp"
