--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -19,7 +19,7 @@ Ballard wasn’t always part of Seattle - in its early days, it was an independe
 
 Incorporated in 1889, they had all the things that a town would need, including a post office, a city hall, a Carnegie Library, and a *wooden* fire station.
 
-But the new town was missing one critical piece -- access to fresh water. Sitting on the saltwater sound and with no fresh water sources nearby, Ballard relied on the city of Seattle to provide them with safe drinking water. And although it was the second-largest town in King County, in 1907, it was decided that Ballard would become a part of the largest town in King County, Seattle.
+But the new town was missing one critical piece -- access to fresh water. Sitting on the saltwater sound and with no fresh water sources nearby, Ballard relied on the city of Seattle to provide them with safe drinking water. And although it was the second-largest town in King County, in 1907, it was decided that Ballard would become a part of the largest town in King County: Seattle.
 
 <LOCItem
     type="newspaper"
