--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -25,7 +25,7 @@ But the new town was missing one critical piece -- access to fresh water. Sittin
     type="newspaper"
     image="/loc/seattle/firestationNo18/ballard.png"
     linkOut="https://www.loc.gov/resource/sn87093407/1907-02-06/ed-1/?sp=1&q=ballard+annexation&r=0.604,0.48,0.518,0.358,0"
-    alt="1)	Zoomed-in view of newspaper article with the title, “Ballard Annexation is Being Discussed.”  Article discusses the annexation of the town of Ballard to Seattle."
+    alt="Zoomed-in view of newspaper article with the title, “Ballard Annexation is Being Discussed.”  Article discusses the annexation of the town of Ballard to Seattle."
     caption="Citizens of Ballard were not happy with the decision. On the day they merged, the flag was flown at half-staff."/>
 
 In 1910, Seattle replaced the wooden fire station with the red brick building that still stands today. The architects for the new structure were Bebb & Mendel, who also designed the University Heights Elementary School and the Oriental Building in Downtown Seattle. Bebb later went on to design the Seattle Asian Art Museum (known at the time as the Art Institute of Seattle).
