--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -50,7 +50,7 @@ At times, extra support was needed to handle some fires. In 1958, the Seattle Ce
 <ComicSection cols={5} elements={[
     {type:"text", style:{outline:"bubble"}, src:"Those stacks of wood are over 50 feet high!", position:{col:2, row:1}, size:{width:2, height:1}},
     {type:"text", style:{outline:"bubble"}, src:"It’d be really bad if a fire started here... all of the wood is so.... flammable.", position:{col:3, row:2}, size:{width:3, height:1}},
-    {type:"image", alt:"A brightly colored comic panel showing the inside of a warehouse with large stacks of wood stacked to the ceiling. A horse is drawn mid-sentence looking at the stacks of wood.", src:"/loc/seattle/firestationNo18/mill.png", position:{col:1, row:2}, size:{width:5, height:5}},
+    {type:"image", alt:"A brightly colored comic panel showing the inside of a warehouse with large stacks of wood stacked to the ceiling.", src:"/loc/seattle/firestationNo18/mill.png", position:{col:1, row:2}, size:{width:5, height:5}},
     {type:"image", src:"/loc/seattle/firestationNo18/concernHorse.png", position:{col:4, row:4}, size:{width:2, height:2}},
     {type:"text", style:{outline:"bubble"}, src:"It probably would take at least 3 days to put out...", position:{col:1, row:5}, size:{width:2, height:1}},
     {type:"text", style:{outline:"bubble"}, src:"And require a fireboat....", position:{col:3, row:6}, size:{width:1, height:1}},
