--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -68,7 +68,7 @@ The Fireboat Duwamish is part of Seattle's firefighting fleet, and arrives when 
     caption="The Fireboat Duwamish is the 'best preserved' example of an early 20th century fireboat. It can be seen docked at the Historic Ships Wharf in Lake Union Park."
     alt="A color photograph showing a large white and red fireboat docked in a harbor on a cloudy and gray day. "/>
 
-The Ballard Fire Station still stands today, even though it’s no longer used as a fire station. It’s one of the few structures remaining from historic Ballard - others are the Ballard Bridge, the Ballard Locks, and the Carnegie Library.
+The Ballard Fire Station still stands today, even though it’s no longer used as a fire station. It’s one of the few structures remaining from historic Ballard - others are the Ballard Bridge, the Ballard Locks, and the Carnegie Library (which is also no longer used for its original purpose).
 
 {/* 
 Sticker template: 
