--- a/src/app/content/seattle/architects/mcAdoo.mdx
+++ b/src/app/content/seattle/architects/mcAdoo.mdx
@@ -33,7 +33,7 @@ He was well known for his Northwest modern style, which uses floor to ceiling gl
     {type:"text",position:{col:5, row:4}, size:{width:4, height:2}, style:{outline:"none" , backgroundColor: "white"}, src:"from renovation projects like the 1st African Methodist Church in Capitol Hill"}
 ]}/> 
 <ComicSection rowHeight="2rem" cols={7} elements={[
-    {type:"image",alt:"A side drawing of the Madrona fire station.", src:"/loc/seattle/mcAdoo/library.png", position:{col:3, row:1}, size:{width:5, height:11}},
+    {type:"image",alt:"A side drawing of the Madrona fire station, and a side drawing of the Madrona fire station converted into the Seattle Public Library.", src:"/loc/seattle/mcAdoo/library.png", position:{col:3, row:1}, size:{width:5, height:11}},
     {type:"text",position:{col:1, row:3}, size:{width:3, height:3}, style:{outline:"none" , backgroundColor: "white"}, src:"to converting the Madrona fire station into its branch library"}
 ]}/> 
 <ComicSection rowHeight="2rem" cols={7} elements={[
