--- a/src/app/content/seattle/architects/mcAdoo.mdx
+++ b/src/app/content/seattle/architects/mcAdoo.mdx
@@ -37,7 +37,7 @@ He was well known for his Northwest modern style, which uses floor to ceiling gl
     {type:"text",position:{col:1, row:3}, size:{width:3, height:3}, style:{outline:"none" , backgroundColor: "white"}, src:"to converting the Madrona fire station into its branch library"}
 ]}/> 
 <ComicSection rowHeight="2rem" cols={7} elements={[
-    {type:"image", alt:"A side drawing of the Madrona fire station converted into the Seattle Public Library.",src:"/loc/seattle/mcAdoo/clinic.png", position:{col:1, row:2}, size:{width:7, height:8}},
+    {type:"image", alt:"A drawing of the clinic of Dr. Joyner, a one-story building built of brick.",src:"/loc/seattle/mcAdoo/clinic.png", position:{col:1, row:2}, size:{width:7, height:8}},
     {type:"text",position:{col:1, row:1}, size:{width:7, height:2}, style:{outline:"none" , backgroundColor: "white"}, src:"He was also hired to design original buildings for people around the city, including the medical clinic for Dr. Robert Joyner, which is still standing at 2041 East Madison Street."}
 ]}/> 
 
