--- a/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
+++ b/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
@@ -45,7 +45,7 @@ Built in 1940, it had been a dream of Seattle engineer Homer Hadley since the 19
     {type:"image", alt:"A brightly colored diagram showing a road on a row of barges floating in a body of water. In the foreground is Homer Hadley mid- sentence gesturing towards the body of water, barges and road. ",src:"/loc/seattle/bridgeAndTunnel/diagram.png",position:{col:1, row:5}, size:{width:3, height:4}}, 
     {type:"text", src:"A bunch of barges, connected together, with a road built on top.", position:{col:1, row:8}, size:{width:2, height:2}, style:{outline: "box", backgroundColor: "white"}, bubbleStyle: {tailDegree: 0}},
     {type:"image", alt:"A brightly colored drawing of a man with a large mustache grimacing in shock named Lacey V. Murrow.", src:"/loc/seattle/bridgeAndTunnel/homer2.png",position:{col:2, row:6}, size:{width:2, height:2}}, 
-    {type:"image", alt:"A brightly colored drawing of Homed Hadley mid-sentence.", src:"/loc/seattle/bridgeAndTunnel/murrow.png",position:{col:1, row:9}, size:{width:1, height:2}}, 
+    {type:"image", alt:"A brightly colored drawing of Homer Hadley mid-sentence.", src:"/loc/seattle/bridgeAndTunnel/murrow.png",position:{col:1, row:9}, size:{width:1, height:2}}, 
     {type:"text", src:"No, no, you’re right. I’ll think of something else.", position:{col:2, row:9}, size:{width:2, height:2}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 0}},
     {type:"image", alt:"A brightly colored comic panel showing the cross-section of a pontoon floating in water, with a couple of fish in the swimming around the pontoon.", src:"/loc/seattle/bridgeAndTunnel/homer3.png",position:{col:3, row:11}, size:{width:1, height:2}}, 
     {type:"text", src:"Lacey V. Murrow, director of Washington state highways", position:{col:1, row:11}, size:{width:1, height:2}, style:{outline: "none"}, bubbleStyle: {tailDegree: 0}},
