edit cunningham hall typo

--- a/src/app/content/seattle/architects/cunninghamHall.mdx
+++ b/src/app/content/seattle/architects/cunninghamHall.mdx
@@ -15,7 +15,7 @@ blurb: "In 2009, Cunningham Hall was moved .3 miles to a new location. At 100 ye
 stickers: [{image: "/loc/seattle/cunninghamHall/aypStamp.png",title: "Exposition Logo of the Alaska-Yukon-Pacific.", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.059,0.604,0.155,0.105,0"},{image: "/loc/seattle/cunninghamHall/aypBanner.png", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.778,0.593,0.153,0.105,0"}, {image: "/loc/seattle/cunninghamHall/seattleUSA.png", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.303,0.534,0.38,0.26,0"},{image: "/loc/seattle/cunninghamHall/hallSticker.png"}]
 ---
 
-Creating a building is a lot of work**! **Some projects get delayed years at the beginning, just choosing the perfect spot for the structure. 
+Creating a building is a lot of work! Some projects get delayed years at the beginning, just choosing the perfect spot for the structure. 
 
 <ComicSection cols={6} rowHeight="3rem" elements={[
     {type:"image", src:"/loc/seattle/cunninghamHall/moving.png", alt:"A black and white comic panel showing a giant person carrying a small building in its arms while it walks through a miniature cityscape. The person is looking down trying to figure out where to place the building it's carrying.", position:{col:1, row:4}, size:{width:6, height:6}},
