new alice ball stickers

--- a/src/app/content/seattle/names/aliceBall.mdx
+++ b/src/app/content/seattle/names/aliceBall.mdx
@@ -8,11 +8,11 @@ neighborhood: Greenwood
 zoom: 15
 tags: ["names"]
 cameraImage: "/loc/seattle/aliceBall/daguerreotype.jpg"
-cardImage: "/placeholderThumbnail.png"
-stampName:
+cardImage: "/loc/seattle/aliceBall/daguerreotype.jpg"
+stampName: "/illustrations/seattleStamp2.png"
 photoPrompt:
-blurb:
-stickers: [{image: "/loc/seattle/aliceBall/tree.png"},]
+blurb: "This Greenwood park has a connection to the cure for leprosy, the University of Hawai'i, and a pioneering scientist. Read on to see how they all connect."
+stickers: [{image: "/loc/seattle/aliceBall/sticker.png", title: "Frame of John Presley Ball photograph", linkOut: "https://www.loc.gov/resource/ppmsca.80088"},{image: "/loc/seattle/aliceBall/khi.png", title: "Kalaupapa Social Hall in the Historic American Buildings Survey", linkOut: "https://www.loc.gov/resource/hhh.hi0098.sheet/?sp=1"},{image: "/loc/seattle/aliceBall/tree.png"},{image: "/loc/seattle/aliceBall/injest2.png"},]
 ---
 
 Leprosy is a bacterial disease that has been devastating humans for thousands of years. In the past, there was nothing you could do if you got it. You would just be shipped off to live with other people with the disease and be legally considered dead.
