--- a/src/app/content/seattle/architects/somervellAndThomas.mdx
+++ b/src/app/content/seattle/architects/somervellAndThomas.mdx
@@ -9,9 +9,9 @@ zoom: 15
 tags: ["architects", "built"]
 cameraImage: "/loc/seattle/somervellAndThomas/seattleMap.png"
 cardImage: "/loc/seattle/somervellAndThomas/libraryFire.png"
-stampName:
+stampName: "/illustrations/seattleStamp2.png"
 photoPrompt: "What details about the building do you notice?"
-blurb: "VVNTODO"
+blurb: "Columbia City's branch of the Seattle Public Library was a part of a larger effort to expand the library system across the city. Learn about the history of the SPL and what makes this branch unique."
 stickers: [{image: "/loc/seattle/somervellAndThomas/smith.png", linkOut: "https://www.loc.gov/resource/g4284s.pm009770/?r=0.546,0.369,0.08,0.055,0", title: "Drawing of Smith Tower from a birdseye view map."},{image: "/loc/seattle/somervellAndThomas/columbia.png", linkOut: "https://www.loc.gov/resource/g4284s.pm009770/?r=0.727,0.286,0.166,0.113,0", title: "Columbia label from birdseye view map"}]
 ---
 
@@ -20,12 +20,12 @@ Carnegie libraries can be seen all around the world, and Seattle is no exception
 The first Seattle Carnegie library was actually the original Central Library. Established in 1890, the Seattle Public Library was pretty revolutionary. At that time, it was common to have closed stacks -- if a patron wanted to see a book, they would have to ask the librarian to fetch it for them. 
 
 <ComicSection cols={5} rowHeight="3rem" elements={[
-    {type:"image", src:"/loc/seattle/somervellAndThomas/line.png", position:{col:1, row:1}, size:{width:5, height:4}},
+    {type:"image", alt:"A line comic of a library patrons waiting in line at a reference desk to request a book.",src:"/loc/seattle/somervellAndThomas/line.png", position:{col:1, row:1}, size:{width:5, height:4}},
     {type:"text", style:{outline:"bubble"}, src:"As you can imagine, this doesn't scale very well.",position:{col:1, row:6}, size:{width:3, height:3}, bubbleStyle: {tailDegree: 50}},
-    {type:"image", src:"/loc/seattle/somervellAndThomas/talking.png", position:{col:1, row:9}, size:{width:5, height:6}},
+    {type:"image", alt:"A line comic of a man in a suit and bowtie behind a reference desk talking to the camera, and a woman walking away from the desk browsing a book while she walks.", src:"/loc/seattle/somervellAndThomas/talking.png", position:{col:1, row:9}, size:{width:5, height:6}},
     {type:"text", style:{outline:"bubble"}, src:"So we were the first library on the West Coast to open up our book stacks for people to just browse!",position:{col:3, row:13}, size:{width:3, height:3}, bubbleStyle: {tailDegree: 250}},
-    {type:"image", src:"/loc/seattle/somervellAndThomas/alarm.png", position:{col:4, row:16}, size:{width:3, height:5}},
     {type:"text", style:{outline:"bubble"}, src:"Excuse me, Mr. Smith! How would you respond to the allegations that you were the one who set the library on fire and destroyed over 25,000 books??",position:{col:1, row:17}, size:{width:3, height:3}, bubbleStyle: {tailDegree: 140}},
+    {type:"image", alt:"A line comic of the man from behind the desk looking surprised.", src:"/loc/seattle/somervellAndThomas/alarm.png", position:{col:4, row:16}, size:{width:3, height:5}},
 ]}/> 
 
 At the beginning of 1901, a huge fire consumed the wooden Yesler Mansion that the library was operating out of. It left the library with nothing -- no books and no home.
@@ -35,13 +35,13 @@ At the beginning of 1901, a huge fire consumed the wooden Yesler Mansion that th
     image="/loc/seattle/somervellAndThomas/libraryFire.png"
     linkOut="https://www.loc.gov/resource/sn87093407/1901-01-02/ed-1/?sp=1&q=library&r=-0.01,0.306,0.355,0.249,0"
     caption="The only books that survived were the ones that were checked out at the time of the fire - about 5,000."
-    alt=""/>
+    alt="A black and white representation of a newspaper with the headline, “ Free Public Library is Totally Destroyed.” "/>
 <LOCItem
     type="newspaper"
     image="/loc/seattle/somervellAndThomas/newLibrary.png"
     linkOut="https://www.loc.gov/resource/sn87093407/1901-01-03/ed-1/?sp=1&q=library&r=-0.054,0.112,0.436,0.299,0"
     caption="But only a day later, people were hopeful - it seemed that the library had support to come back bigger than ever before."
-    alt=""/>
+    alt="A black and white representation of a newspaper page, with a headline, “ Beautiful City Hall and Library a Possibility.” "/>
 
 Four days after the fire, news broke that Andrew Carnegie, who before had written Seattle off as a “hot air boom town” whose bust was imminent, would donate $200,000 so that the city could build a new, “fireproof” library. The equivalent of $7.5 million dollars today, the city used this funding to purchase the whole city block between 4th and 5th avenue on Madison and Spring, which is the same location where the Central Library sits today.
 
@@ -50,14 +50,14 @@ Four days after the fire, news broke that Andrew Carnegie, who before had writte
     image="/loc/seattle/somervellAndThomas/seattleMap.png"
     linkOut="https://www.loc.gov/resource/g4284s.pm009770/?r=0.409,0.25,0.286,0.196,0"
     caption=""
-    alt=""/>
+    alt="A blue and white map of Seattle"/>
 
 
 <ComicSection cols={7} overlap={100} rowHeight="2rem" elements={[
     {type:"text", style:{outline:"bubble"}, src:"But this doesn't look anything like the current Seattle Public Library.",position:{col:1, row:1}, size:{width:3, height:3}, bubbleStyle: {tailDegree: 10}},
-    {type:"image", src:"/loc/seattle/somervellAndThomas/smith1.png", position:{col:4, row:1}, size:{width:2, height:2}},
+    {type:"image", alt:"A line comic of the man from before stands in front of the map",src:"/loc/seattle/somervellAndThomas/smith1.png", position:{col:4, row:1}, size:{width:2, height:2}},
     {type:"text", style:{outline:"bubble"}, src:"Ours is more..",position:{col:6, row:2}, size:{width:2, height:2}, bubbleStyle: {tailDegree: 180}},
-    {type:"image", src:"/loc/seattle/somervellAndThomas/smithTwo.png", position:{col:1, row:5}, size:{width:7, height:8}},
+    {type:"image",alt:"A line comic of the man from behind the reference desk demonstrating geometric shapes with his arms.", src:"/loc/seattle/somervellAndThomas/smithTwo.png", position:{col:1, row:5}, size:{width:7, height:8}},
     {type:"text", style:{outline:"bubble", fontSize: "1.3rem"}, src:"Geometric",position:{col:4, row:7}, size:{width:2, height:3}, bubbleStyle: {tailDegree: 0}},
     {type:"text", style:{outline:"box" , backgroundColor: "white", fontSize:"1rem"}, src:"Yeah, in 1998, Seattle voters voted in favor of the largest library bond initiative at the time, and funded almost $200 million in renovations for Seattle’s libraries. Of the eight Carnegie libraries built in Seattle, the Central Library is the only one that was demolished. The others, if not still operating as a library branch, are still standing.",position:{col:1, row:13}, size:{width:7, height:4}},
 ]}/> 
@@ -68,10 +68,10 @@ And finally in 1911, Carnegie donated $70,000 more to fund the building of the l
 
 <ComicSection cols={5} rowHeight="2rem" elements={[
     {type:"text",position:{col:1, row:1}, size:{width:5, height:4}, style:{outline:"box" , backgroundColor: "white"}, src:"While the Queen Anne and Columbia City branch libraries were created by the same people at the same time, they have subtle differences that show off what style of architecture each one was born from."},
-    {type:"image", position:{col:1, row:5}, size:{width:5, height:8}, src:"/loc/seattle/somervellAndThomas/queenAnneDiagram.png"},
+    {type:"image", alt:"A colorful line comic depicting elements of the “Tudor Revival” architecture style.",position:{col:1, row:5}, size:{width:5, height:8}, src:"/loc/seattle/somervellAndThomas/queenAnneDiagram.png"},
     {type:"text",position:{col:3, row:3}, size:{width:3, height:8},style:{outline:"box" , backgroundColor: "white"}, src:"They both started from the same template of a Carnegie library: stairs leading up to a grand front door and many windows - to represent how learning can elevate and enlighten people."},
     {type:"text",position:{col:1, row:17}, size:{width:5, height:4}, style:{outline:"box" , backgroundColor: "white", fontSize: "1rem"}, src:"The Queen Anne one is “Tudor Revival”, which can be seen from the tall parapets, the placement of lamps on the inside guarding the main entrance, and the brickwork, which is “English bond”"},
-    {type:"image", position:{col:1, row:20}, size:{width:5, height:13}, src:"/loc/seattle/somervellAndThomas/columbiaDiagram.png",},
+    {type:"image", alt:"A colorful line comic depicting elements of the “Georgian Revival” architecture style in the Columbia branch of the  Seattle Public Library Building ",position:{col:1, row:20}, size:{width:5, height:13}, src:"/loc/seattle/somervellAndThomas/columbiaDiagram.png",},
     {type:"text",position:{col:1, row:32}, size:{width:5, height:3}, style:{outline:"box" , backgroundColor: "white", fontSize: "1rem"}, src:"The Columbia Branch on the other hand is “Georgian Revival”, which is typically very symmetrical and inspired by classical Greek and Roman Architecture. That’s why there are large blocks supporting the columns on each end, and the masonry has V’s in place of U’s."},
 ]}/> 
 
