add sinking ship stamp, new photo prompt, edits

--- a/src/app/content/seattle/built/sinking-ship.mdx
+++ b/src/app/content/seattle/built/sinking-ship.mdx
@@ -9,9 +9,9 @@ zoom: 13
 cameraImage: "/loc/occidental.png"
 cardImage: "/loc/triangle.jpg"
 tags: [ "built"]
-photoPrompt: "Find the best and worst angles of the garage."
+photoPrompt: "The garage looks cool from some viewpoints, but normal from others. Find the best and worst angles of the garage."
 blurb: "At the corner of Yesler, 1, and James sits the Sinking Ship Parking Garage, which was voted the coolest parking garage in the country. But before it was a parking garage, a famous hotel sat here."
-stampName: "/seattle-general-2.svg"
+stampName: "/illustrations/seattleStamp2.png"
 stickers: [{image: "/loc/seattle/seattle-hotel.png", title: "Hotel Seattle", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.metropolitanseat00unse/?sp=19&r=-0.073,0.224,0.854,0.482,0"},{image: "/loc/seattle/sinkingShip/skeptic.png"}]
 ---
 
@@ -43,7 +43,7 @@ Before this parking garage was built here, it was the site of three Seattle hote
     image="/loc/seattle/seattle-hotel.png"/>
 <ComicSection cols={5} elements={[
     {type: "image", src:"/comics/sinking-ship/g2.png", position:{col:1, row:2}, size:{width:2, height:2} },
-    {type:"text", src:"But it’s cursed! how many hotels stood here before?", style:{outline: "bubble"},position:{col:1, row:1}, size:{width:2, height:1}, bubbleStyle: {tailDegree: 90}},
+    {type:"text", src:"But it’s cursed! How many hotels stood here before?", style:{outline: "bubble"},position:{col:1, row:1}, size:{width:2, height:1}, bubbleStyle: {tailDegree: 90}},
     {type: "image", src:"/loc/seattle/sinkingShip/skeptic.png", position:{col:4, row:3}, size:{width:2, height:2} },
     {type:"text", src:"...", style:{outline: "bubble"},position:{col:4, row:2}, size:{width:1, height:1}, bubbleStyle: {tailDegree: 80}},
     {type:"text", src:"Three...", style:{outline: "bubble"},position:{col:5, row:2}, size:{width:1, height:1}, bubbleStyle: {tailDegree: 100}},
@@ -58,7 +58,7 @@ The Occidental II was burned down by the Great Seattle Fire, only 4 years after 
 
 The Hotel Seattle, which was built to replace it, was also unlucky. In 1949, when a huge earthquake shook Olympia, many buildings in Pioneer Square also were damaged. This led to the Hotel Seattle falling into disrepair, and it was the first building to be torn down as part of a larger plan to renovate Pioneer Square.
 
-If you see a building in Pioneer Square that was around for the 1949 earthquake, you can probably find signs of earthquake damage.
+If you see a building in Pioneer Square that survived the 1949 earthquake, you can probably find signs of earthquake damage.
 
 <LOCItem
     type="manuscript"
@@ -69,7 +69,7 @@ If you see a building in Pioneer Square that was around for the 1949 earthquake,
  
 <ComicSection elements={[
     {type: "image", src:"/comics/sinking-ship/g3.png", position:{col:3, row:1}, size:{width:1, height:2}, alt:"Doc Maynard is standing looking proud"},
-    {type:"text", src:"When Susan B. Anthony Visited Seattle, She stayed at the Occidental I.", style:{outline: "bubble"},position:{col:1, row:1}, size:{width:2, height:2}, bubbleStyle: {tailDegree: 0}},
+    {type:"text", src:"When Susan B. Anthony visited Seattle, she stayed at the Occidental I.", style:{outline: "bubble"},position:{col:1, row:1}, size:{width:2, height:2}, bubbleStyle: {tailDegree: 0}},
     {type:"text", src:"That's pretty cool", style:{outline: "bubble"},position:{col:2, row:3}, size:{width:1, height:1}, bubbleStyle: {tailDegree: 310}},
     
 
