update assets for arai frontmatter.

--- a/src/app/content/seattle/architects/arai.mdx
+++ b/src/app/content/seattle/architects/arai.mdx
@@ -1,5 +1,5 @@
 ---
-title: VVN TODO need title
+title: Seattle's baseball playing architect
 locationTitle: Seattle Betsuin Buddhist Temple
 address: 1427 South Main St, Seattle, WA 98144
 location: ["Seattle"] 
@@ -7,11 +7,11 @@ latlon: [47.5998061623727, -122.3132184]
 neighborhood: International District
 zoom: 18
 tags: ["architects", "built"]
-cameraImage: "/loc/seattle/arai/temple.png"
+cameraImage: "/loc/seattle/arai/wisteriaCropped.png"
 cardImage: "/loc/seattle/arai/gate.png"
 stampName: "/illustrations/seattleStamp2.png"
-photoPrompt:
-blurb:
+photoPrompt: "The temple has many beautifully designed elements, such as the wisteria crest over the steps leading up to its entrance. Take pictures of the things you notice."
+blurb: "Kichio Allen Arai's work as an architect is dotted throughout Seattle. Some are prominently notable, such as the Seattle Betsuin Buddhist Temple. But others are subtly exciting. Read more to find out."
 stickers: [{image: "/loc/seattle/arai/nisei.png", title: "Snippet from The Northwest Times" , linkOut: "https://www.loc.gov/resource/sn86071999/1949-05-11/ed-1/?sp=3&q=broadway+playfield&r=0.26,0.3,0.511,0.35,0"},{image: "/loc/seattle/arai/gate.png"}]
 ---
 
