add stamps, add blurb for medgar evers

--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -9,7 +9,7 @@ zoom: 15
 tags: ["built","architects"]
 cameraImage: "/loc/seattle/firestationNo18/firehorse.png"
 cardImage: "/loc/seattle/firestationNo18/ballard.jpg"
-stampName:
+stampName: "/illustrations/aaSeattleStamp.png"
 photoPrompt: "Visit the retired fire station in person - what things still look like a fire station? What things definitely don't?"
 blurb: "Learn how the city of Ballard became a part of Seattle, and about one of the last remaining structures from historic Ballard, Fire Station No. 18."
 stickers: [{image: "/loc/seattle/firestationNo18/fireHorse.png", title: "Horse-drawn fire engine rushing to a fire", linkOut: "https://www.loc.gov/resource/cph.3a27542/"},{image: "/loc/seattle/firestationNo18/ballard.jpg", title: "Aerial view of the Ballard neighborhood north of downtown Seattle, Washington, along Elliott Bay" , linkOut: "https://www.loc.gov/resource/highsm.50268/"}, {image: "/loc/seattle/firestationNo18/ballard2.jpg", title: "Aerial view of Seattle, Washington, with a focus on the Hiram M. Chittenden Locks, or Ballard Locks, a complex of locks at the west end of Salmon Bay and the Lake Washington Ship Canal ", linkOut: "https://www.loc.gov/resource/highsm.51134/"}, {image: "/loc/seattle/firestationNo18/seaserpant.png", title: "Photo shows nine men standing with a very long driftwood sculpture of a sea serpent on a beach in the Ballard area of Seattle, Washington." , linkOut: "https://www.loc.gov/resource/cph.3b12369/"}, {image: "/loc/seattle/firestationNo18/concernHorse.png"},]
