--- a/src/app/content/seattle/built/medgarEversPool.mdx
+++ b/src/app/content/seattle/built/medgarEversPool.mdx
@@ -9,9 +9,9 @@ zoom: 15
 tags: ["built"]
 cameraImage: "/loc/seattle/medgarEversPool/greaterSeattle.png"
 cardImage: "/loc/seattle/medgarEversPool/map.jpg"
-stampName:
+stampName: "/illustrations/aaSeattleStamp.png"
 photoPrompt:
-blurb: test test test test 
+blurb: "Seattle's pool is named after a man who never stepped foot in the city. Learn about why the community chose to dedicate the building to him."
 stickers: [{image: "/loc/seattle/medgarEversPool/greaterSeattle.png", linkOut: "https://www.loc.gov/resource/sn84025811/1903-12-25/ed-1/?sp=1"},{image: "/loc/seattle/medgarEversPool/compass.png", linkOut: "https://www.loc.gov/resource/g4284sm.g4284sm_g09315190502/?sp=45&st=image&r=0.64,0.127,0.451,0.32,0"}]
 ---
 
