--- a/src/app/content/seattle/built/tugboatFoss.mdx
+++ b/src/app/content/seattle/built/tugboatFoss.mdx
@@ -9,7 +9,7 @@ zoom: 15
 tags: ["built"]
 cameraImage: /loc/seattle/tugboatFoss/fossEmblem.png
 cardImage: "/loc/seattle/tugboatFoss/columbiaRiver.png"
-stampName: "/seattle-general-2.svg"
+stampName: "/illustrations/seattleStamp2.png"
 photoPrompt: "Visit the pier and see all the different kinds of boats there are."
 blurb: "The oldest wooden tugboat's seen and done it all! From dangerous rapids to starring in Hollywood!"
 stickers: [{image: "/loc/seattle/tugboatFoss/fossEmblem.png", linkOut: "https://www.loc.gov/resource/hhh.wa0868.photos/?sp=1", title: "Foss Company motto on the side of the boat"},{image: "/loc/seattle/tugboatFoss/columbiaRiver.png", linkOut: "https://www.loc.gov/resource/ppmsca.18165/", title: "The Columbia River, one of the most dangerous crossings"},{image: "/loc/seattle/tugboatFoss/columbiaRiver2.jpg", title: "Columbia River, Oregon", linkOut: "https://www.loc.gov/resource/highsm.12109/?r=-0.133,-0.057,1.281,0.89,0"}, {image: "/loc/seattle/tugboatFoss/theFoss.png" },{image: "/loc/seattle/tugboatFoss/boat.png" }, {image: "/loc/seattle/tugboatFoss/fire1.png" }, ]
