remove stories, add stamps, add more stickers to bridge

--- a/src/app/content/seattle/built/medgarEversPool.mdx
+++ b/src/app/content/seattle/built/medgarEversPool.mdx
@@ -4,6 +4,7 @@ locationTitle: Medgar Evers Pool
 address: 500 23rd Ave
 location: ["Seattle"] 
 latlon: [47.60669250396333, -122.3024082887183]
+hidden: true
 neighborhood: Central District
 zoom: 15
 tags: ["built"]
