--- a/src/app/content/seattle/names/denny-regrade.mdx
+++ b/src/app/content/seattle/names/denny-regrade.mdx
@@ -10,10 +10,10 @@ zoom: 15
 tags: ["names"]
 cardImage: "/loc/regrade-results.jpg"
 cameraImage: "/loc/regrade-results.jpg"
-stampName: "regrade.svg"
+stampName: "/illustrations/aaSeattleStamp.png"
 blurb: "Seattle is a hilly city, but it used to be much hillier. Powerful jets of water were used to carve into Seattle's hills and create the cityscape we recognize today."
 photoPrompt: "The old Washington Hotel stood on the block between Stewart and Virginia, and you can walk two blocks up 3rd to find the old Cornelius Hotel, whose height matched the peak of the old Denny Hill. Take pictures along the way."
-stickers: [{image: "/loc/cutting-hill.jpg", linkOut: "https://www.loc.gov/item/2015646669/"},{image: "/loc/regrade-results.jpg", linkOut: "https://www.loc.gov/item/2024693820/"},{image: "/comics/denny-regrade/arthur-3.png"},]
+stickers: [{image: "/loc/cutting-hill.jpg", title: "Cutting down a hill with a powerful jet of water", linkOut: "https://www.loc.gov/item/2015646669/"},{image: "/loc/regrade-results.jpg", title: "Results of a regrade in Seattle. View of Second Ave. north from Pine", linkOut: "https://www.loc.gov/item/2024693820/"},{image: "/comics/denny-regrade/arthur-3.png"},]
 ---
 
 
