--- a/src/app/content/seattle/names/joseprizal.mdx
+++ b/src/app/content/seattle/names/joseprizal.mdx
@@ -9,7 +9,8 @@ address:
 neighborhood: Beacon Hill
 cardImage: "/loc/seattle-skyline.jpg"
 cameraImage: "/loc/seattle-skyline.jpg"
-stampName:
+hidden: true
+stampName: "/illustrations/aaSeattleStamp.png"
 photoPrompt:
 blurb:
 stickers:
