--- a/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
+++ b/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
@@ -12,7 +12,7 @@ cardImage: "/loc/seattle/bridgeAndTunnel/bridge.jpg"
 stampName: "/illustrations/seattleStamp2.png"
 photoPrompt: "Standing in this park, you can see the Homer Hadley Bridge on the left and the Lacey V Murrow Bridge on the right."
 blurb: "The Lacey V. Murrow Memorial Bridge was the first bridge to cross Lake Washington. When it opened in 1940, it was notable worldwide as the 'largest thing afloat' in the world."
-stickers: []
+stickers: [{image: "/loc/seattle/bridgeAndTunnel/bridge.jpg", title: "Mount Baker Ridge Tunnel, Interstate 90, passing under Mount Baker Ridge", linkOut: "https://www.loc.gov/item/wa0442/"},{image: "/loc/seattle/bridgeAndTunnel/map.png", title: "Seattle birdseye view of portion of city and vicinity.", linkOut: "https://www.loc.gov/resource/g4284s.pm009770/?r=-0.068,-0.055,1.183,0.761,0"}, {image: "/loc/seattle/bridgeAndTunnel/haer2.png",title: "Historic American Engineering Record of the Mount Baker Ridge Tunnel", linkOut: "https://www.loc.gov/item/wa0442/"}, {image: "/loc/seattle/bridgeAndTunnel/bridge.png"}, {image: "/loc/seattle/bridgeAndTunnel/medal.png"},]
 ---
 
 <ComicSection elements={[
