--- a/src/app/content/seattle/olmsted/ravenna.mdx
+++ b/src/app/content/seattle/olmsted/ravenna.mdx
@@ -9,6 +9,7 @@ tags: ["olmsted"]
 blurb: "Ravenna Park used to host the largest trees in all of Seattle. However, when the city acquired the park, they started disappearing..."
 cardImage: "/comics/ravenna-tree/ravennaheader.png"
 cameraImage: "/loc/seattle/ravenna/ravenna.jpg"
+stampName: "/illustrations/aaSeattleStamp.png"
 stickers: [{image: "/placeholderThumbnail.png"},{image: "/comics/ravenna-tree/ravennaTree1.png"}, {image: "/loc/seattle/ravenna/letter2.png", linkOut: "https://www.loc.gov/resource/mss52571.mss52571-02-096_0293_0296/?sp=3&st=image&r=0.323,0.009,0.293,0.436,0", title: "Letter"},{image: "/loc/seattle/ravenna/invitation.png",linkOut: "https://www.loc.gov/resource/mss52571.mss52571-02-096_0293_0296/?sp=2&r=0.168,0.397,0.272,0.405,0", title: "Invitation to Tree Naming Ceremony"}]
 ---
 
